--- a/themes/JustNews/index.html
+++ b/themes/JustNews/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit">
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width,viewport-fit=cover">
     <title>{{ &title }}</title>
     <meta name="keywords" content="{{ &keyWords }}" />
@@ -150,7 +149,7 @@
                         {{ #widgetRecentlyList }}
                         <li class="item">
                             <div class="item-img">
-                                <a class="item-img-inner" href="{{ &url }}" title="{{ &title }}" rel="bookmark">
+                                <a class="img-inner" href="{{ &url }}" title="{{ &title }}" rel="bookmark">
                                     <img width="90" height="62" src="{{ &img }}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image j-lazy" alt="{{ &title }}" title="{{ &title }}" data-original="{{ &img }}"></a>
                             </div>
                             <div class="item-content">
